--- a/SAMPLE_EXERCICE/pom.xml
+++ b/SAMPLE_EXERCICE/pom.xml
@@ -3,14 +3,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<groupId>org.caseine</groupId>
-		<artifactId>COURSE_NAME</artifactId>
+		<artifactId>sample-course</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>sample-exercice</artifactId>
 
 	<properties>
-		<CASEINE_VPL_ID>45353</CASEINE_VPL_ID>
+		<CASEINE_VPL_ID>???VPLID???</CASEINE_VPL_ID>
 	</properties>
     <name>Sample Exercice (e.g. Point)</name>
 </project>
